# clp

./: taskfile.yaml
components/clp-package-utils/clp_package_utils/: controller.py  general.py
components/clp-package-utils/clp_package_utils/scripts/: compress.py  compress_from_s3.py  filter_pack.py  start_clp.py
components/clp-package-utils/clp_package_utils/scripts/native/: compress.py  filter_pack.py
components/clp-py-utils/clp_py_utils/: clp_config.py  clp_metadata_db_utils.py  filter_file.py  filter_pack.py
components/core/: CMakeLists.txt
components/core/cmake/Options/: options.cmake
components/core/src/clp/: BloomFilter.cpp  BloomFilter.hpp  DictionaryWriter.hpp
components/core/src/clp/clg/: CMakeLists.txt  clg.cpp
components/core/src/clp/clp/: CMakeLists.txt
components/core/src/clp/streaming_archive/writer/: Archive.cpp  Archive.hpp
components/core/src/clp_s/: ArchiveReader.cpp  ArchiveReader.hpp  ArchiveWriter.cpp  ArchiveWriter.hpp  BloomFilter.cpp  BloomFilter.hpp  CMakeLists.txt  ColumnReader.cpp  ColumnWriter.hpp  CommandLineArguments.cpp  CommandLineArguments.hpp  DictionaryReader.hpp  DictionaryWriter.cpp  DictionaryWriter.hpp  JsonParser.cpp  JsonParser.hpp  PackedStreamReader.cpp  SchemaReader.cpp  SchemaWriter.cpp  SchemaWriter.hpp  archive_constants.hpp  clp-filter.cpp  clp-s.cpp
components/core/src/clp_s/archive_analyzer/: ArchiveAnalyzer.cpp  ArchiveAnalyzer.hpp  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  Dockerfile  MptFingerprint.cpp  MptFingerprint.hpp  README.md  SetFingerprint.cpp  SetFingerprint.hpp  archive-analyzer.cpp  build.sh  generate_report.py
components/core/src/clp_s/filter/: AtomicWorkQueue.cpp  AtomicWorkQueue.hpp  BinaryFuseFilter.cpp  BinaryFuseFilter.hpp  BloomFilter.cpp  BloomFilter.hpp  BloomFilterIndexBuilder.cpp  BloomFilterIndexBuilder.hpp  BloomFilterIndexRunner.cpp  BloomFilterIndexRunner.hpp  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  ErrorCode.cpp  ErrorCode.hpp  FilterBuilder.cpp  FilterBuilder.hpp  FilterConfig.cpp  FilterConfig.hpp  FilterFile.cpp  FilterFile.hpp  FilterReader.cpp  FilterReader.hpp  IndexBuilder.hpp  IndexBuilderSpecification.hpp  IndexDefs.hpp  IndexRegistry.cpp  IndexRegistry.hpp  IndexRunner.hpp  NGramPrefixFilter.cpp  NGramPrefixFilter.hpp  PackBuilder.cpp  PackBuilder.hpp  PackSearcher.cpp  PackSearcher.hpp  PackedFilterBuilder.cpp  PackedFilterBuilder.hpp  PackedFilterDefs.hpp  PackedFilterReader.cpp  PackedFilterReader.hpp  (+18 more)
components/core/src/clp_s/filter/FilterPolicy/: BinaryFuseFilterPolicy.hpp  BloomFilterPolicy.hpp  FilterPolicy.hpp
components/core/src/clp_s/filter/formulas/: bloom.txt
components/core/src/clp_s/filter/tests/: benchmark_clp_s_bloom_filter_roaringbitmap.cpp  test-clp_s-index_defs.cpp
components/core/src/clp_s/indexer/: CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  PackedFilterIndexer.cpp  PackedFilterIndexer.hpp  indexer.cpp
components/core/src/clp_s/packed_filter/: Build.cpp  Build.hpp  CMakeLists.txt  Query.cpp  Query.hpp  packed_filter.cpp
components/core/src/clp_s/packed_filter_query/: CMakeLists.txt  packed_filter_query.cpp
components/core/src/clp_s/search/: CMakeLists.txt  Output.cpp  Output.hpp  QueryRunner.cpp  QueryRunner.hpp  SearchTelemetry.cpp  SearchTelemetry.hpp  TelemetryContext.cpp  TelemetryContext.hpp  TelemetryInitializer.cpp  TelemetryInitializer.hpp
components/core/tools/docker-images/clp-core-ubuntu-jammy/: Dockerfile
components/core/tools/scripts/db/: init-db.py
components/job-orchestration/job_orchestration/executor/compress/: compression_task.py
components/job-orchestration/job_orchestration/executor/query/: celeryconfig.py  filter_scan_task.py  fs_search_task.py
components/job-orchestration/job_orchestration/scheduler/: job_config.py  scheduler_data.py
components/job-orchestration/job_orchestration/scheduler/compress/: compression_scheduler.py
components/job-orchestration/job_orchestration/scheduler/query/: query_scheduler.py
components/package-template/src/etc/: clp-config.template.json.yaml  clp-config.template.text.yaml
components/package-template/src/etc/otel-collector/: config.yaml
components/package-template/src/sbin/: filter-pack.sh
docs/src/user-docs/: reference-telemetry.md
telemetry-dumps/: telemetry_01.txt  telemetry_02.txt  telemetry_03.txt  telemetry_04.txt  telemetry_05.txt  telemetry_06.txt  telemetry_07.txt  telemetry_08.txt
tools/deployment/package/: docker-compose-all.yaml
tools/deployment/package-helm/: .set-up-common.sh
tools/deployment/package-helm/templates/: compression-scheduler-deployment.yaml  configmap.yaml  otel-collector-deployment.yaml  query-worker-deployment.yaml
tools/docker-images/clp-package/: Dockerfile
